# testnet-stake-pool-registry-validator

./: README.org  default.nix  lib.sh  registry.cabal  validate.sh  validator.cabal
app/: registry.hs  validator.hs
nix/: github.json  iohk-nix-src.json  jormungandr.nix  overrides.nix  packages.nix
tests/: README.org  mk.sh  mkall.sh
