cabal-version:       2.4
name:                validator
version:             0.1.0.0
synopsis:            Development
homepage:            https://github.com/input-output-hk/testnet-stake-pool-registry-validator
license:             Apache-2.0
license-file:        LICENSE
author:              Kosyrev Serge
maintainer:          serge.kosyrev@iohk.io
category:            System

executable validator
  default-language:    Haskell2010
  hs-source-dirs:      app
  main-is:             validator.hs
  build-depends:       base
                     , aeson
                     , bech32
                     , bytestring
                     , containers
                     , directory
                     , extra
                     , filepath
                     , network-uri
                     , optparse-applicative
                     , scientific
                     , text
                     , transformers
                     , transformers-except
                     , time
                     , unordered-containers
